// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrimaryScreenView > matches the DOM-structure snapshot: all-clear (4d) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
    style="--feed-bottom-inset: 0px;"
  >
    <header
      data-role="feed-header"
    >
      <div
        data-role="kiln-mark"
      >
        <img
          alt=""
          aria-hidden="true"
          data-role="kiln-glyph"
          src="/kiln-mark.svg"
        />
        <span
          data-role="kiln-wordmark"
        >
          Kiln
        </span>
      </div>
      <div
        data-role="header-actions"
      >
        <div
          data-role="notify-settings"
        >
          <button
            aria-controls="notify-settings-panel"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Notification settings"
            data-open="false"
            data-role="notify-settings-trigger"
            type="button"
          >
            <svg
              aria-hidden="true"
              data-role="notify-bell"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 12 C33 12 25 25 25 43 C25 56 21 63 16.5 67.5 C14.5 69.7 16 74 19.5 74 H76.5 C80 74 81.5 69.7 79.5 67.5 C75 63 71 56 71 43 C71 25 63 12 48 12 Z"
                fill="currentColor"
              />
              <path
                d="M39 78 A9 9 0 0 0 57 78 Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="notify-settings-panel"
            id="notify-settings-panel"
          >
            <div
              data-role="notify-settings-heading"
            >
              Notifications
            </div>
            <ul
              data-role="notify-settings-list"
            >
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="default"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Default
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="true"
                  data-role="notify-settings-option"
                  data-selected="true"
                  data-value="blocked"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Blocked
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="all"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    All updates
                  </span>
                </button>
              </li>
            </ul>
            <button
              data-role="notify-settings-permission"
              data-status="checking"
              disabled=""
              type="button"
            >
              Checking notifications…
            </button>
          </div>
        </div>
        <a
          aria-label="Dashboard"
          data-role="header-dashboard"
          href="/dashboard"
        >
          <svg
            aria-hidden="true"
            data-role="header-gear"
            viewBox="0 0 20 20"
          >
            <path
              d="M9.00 2.87A7.2 7.2 0 0 1 11.00 2.87L11.31 4.76A5.4 5.4 0 0 1 12.78 5.37L14.33 4.25A7.2 7.2 0 0 1 15.75 5.67L14.63 7.22A5.4 5.4 0 0 1 15.24 8.69L17.13 9.00A7.2 7.2 0 0 1 17.13 11.00L15.24 11.31A5.4 5.4 0 0 1 14.63 12.78L15.75 14.33A7.2 7.2 0 0 1 14.33 15.75L12.78 14.63A5.4 5.4 0 0 1 11.31 15.24L11.00 17.13A7.2 7.2 0 0 1 9.00 17.13L8.69 15.24A5.4 5.4 0 0 1 7.22 14.63L5.67 15.75A7.2 7.2 0 0 1 4.25 14.33L5.37 12.78A5.4 5.4 0 0 1 4.76 11.31L2.87 11.00A7.2 7.2 0 0 1 2.87 9.00L4.76 8.69A5.4 5.4 0 0 1 5.37 7.22L4.25 5.67A7.2 7.2 0 0 1 5.67 4.25L7.22 5.37A5.4 5.4 0 0 1 8.69 4.76L9.00 2.87Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <circle
              cx="10"
              cy="10"
              fill="none"
              r="2.4"
              stroke="currentColor"
              stroke-width="1.5"
            />
          </svg>
        </a>
        <div
          data-role="header-status"
        >
          <button
            aria-controls="header-status-panel"
            aria-expanded="false"
            aria-haspopup="true"
            data-open="false"
            data-role="feed-status"
            type="button"
          >
            5 tickets
            <span
              aria-hidden="true"
              data-role="feed-status-caret"
            />
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="header-status-panel"
            id="header-status-panel"
          >
            <div
              data-role="header-status-empty"
            >
              No tickets
            </div>
          </div>
        </div>
      </div>
    </header>
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <div
          data-role="backlog"
        >
          <div
            data-role="feed-empty"
          >
            <img
              alt=""
              aria-hidden="true"
              data-role="feed-empty-mark"
              src="/kiln-mark.svg"
            />
            <div
              data-role="feed-empty-status"
            >
              <div
                data-role="feed-empty-status-line"
              >
                <span
                  aria-hidden="true"
                  data-active="true"
                  data-role="feed-empty-pulse"
                />
                <span>
                  3 building
                </span>
              </div>
              <span
                data-role="feed-empty-subtext"
              >
                last word 6m ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="paused"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <div
            data-role="dock-mic-group"
          >
            <button
              aria-label="Talk"
              aria-pressed="false"
              data-dock-state="paused"
              data-role="dock-talk"
              type="button"
            >
              <span
                aria-hidden="true"
                data-role="dock-mic"
              >
                <span
                  data-role="dock-mic-orb"
                />
                <span
                  data-role="dock-mic-capsule"
                />
                <span
                  data-role="dock-mic-arc"
                />
                <span
                  data-role="dock-mic-stem"
                />
              </span>
            </button>
          </div>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: blocker + last-seen divider + show-earlier (4a, D2′) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
    style="--feed-bottom-inset: 0px;"
  >
    <header
      data-role="feed-header"
    >
      <div
        data-role="kiln-mark"
      >
        <img
          alt=""
          aria-hidden="true"
          data-role="kiln-glyph"
          src="/kiln-mark.svg"
        />
        <span
          data-role="kiln-wordmark"
        >
          Kiln
        </span>
      </div>
      <div
        data-role="header-actions"
      >
        <div
          data-role="notify-settings"
        >
          <button
            aria-controls="notify-settings-panel"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Notification settings"
            data-open="false"
            data-role="notify-settings-trigger"
            type="button"
          >
            <svg
              aria-hidden="true"
              data-role="notify-bell"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 12 C33 12 25 25 25 43 C25 56 21 63 16.5 67.5 C14.5 69.7 16 74 19.5 74 H76.5 C80 74 81.5 69.7 79.5 67.5 C75 63 71 56 71 43 C71 25 63 12 48 12 Z"
                fill="currentColor"
              />
              <path
                d="M39 78 A9 9 0 0 0 57 78 Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="notify-settings-panel"
            id="notify-settings-panel"
          >
            <div
              data-role="notify-settings-heading"
            >
              Notifications
            </div>
            <ul
              data-role="notify-settings-list"
            >
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="default"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Default
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="true"
                  data-role="notify-settings-option"
                  data-selected="true"
                  data-value="blocked"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Blocked
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="all"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    All updates
                  </span>
                </button>
              </li>
            </ul>
            <button
              data-role="notify-settings-permission"
              data-status="checking"
              disabled=""
              type="button"
            >
              Checking notifications…
            </button>
          </div>
        </div>
        <a
          aria-label="Dashboard"
          data-role="header-dashboard"
          href="/dashboard"
        >
          <svg
            aria-hidden="true"
            data-role="header-gear"
            viewBox="0 0 20 20"
          >
            <path
              d="M9.00 2.87A7.2 7.2 0 0 1 11.00 2.87L11.31 4.76A5.4 5.4 0 0 1 12.78 5.37L14.33 4.25A7.2 7.2 0 0 1 15.75 5.67L14.63 7.22A5.4 5.4 0 0 1 15.24 8.69L17.13 9.00A7.2 7.2 0 0 1 17.13 11.00L15.24 11.31A5.4 5.4 0 0 1 14.63 12.78L15.75 14.33A7.2 7.2 0 0 1 14.33 15.75L12.78 14.63A5.4 5.4 0 0 1 11.31 15.24L11.00 17.13A7.2 7.2 0 0 1 9.00 17.13L8.69 15.24A5.4 5.4 0 0 1 7.22 14.63L5.67 15.75A7.2 7.2 0 0 1 4.25 14.33L5.37 12.78A5.4 5.4 0 0 1 4.76 11.31L2.87 11.00A7.2 7.2 0 0 1 2.87 9.00L4.76 8.69A5.4 5.4 0 0 1 5.37 7.22L4.25 5.67A7.2 7.2 0 0 1 5.67 4.25L7.22 5.37A5.4 5.4 0 0 1 8.69 4.76L9.00 2.87Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <circle
              cx="10"
              cy="10"
              fill="none"
              r="2.4"
              stroke="currentColor"
              stroke-width="1.5"
            />
          </svg>
        </a>
        <div
          data-role="header-status"
        >
          <button
            aria-controls="header-status-panel"
            aria-expanded="false"
            aria-haspopup="true"
            data-open="false"
            data-role="feed-status"
            type="button"
          >
            5 tickets
            <span
              aria-hidden="true"
              data-role="feed-status-caret"
            />
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="header-status-panel"
            id="header-status-panel"
          >
            <div
              data-role="header-status-empty"
            >
              No tickets
            </div>
          </div>
        </div>
      </div>
    </header>
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="blocker"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  aria-hidden="true"
                  data-role="feed-card-dot"
                />
                <span
                  data-role="feed-card-label"
                >
                  Auth
                </span>
                <span
                  data-role="feed-card-age"
                >
                  now
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  The /auth endpoint hands back both a session cookie and a JWT. Which should the client trust as the source of truth?
                </p>
              </div>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Rate limiting
                </span>
                <span
                  data-role="feed-card-age"
                >
                  2m
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
                </p>
              </div>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <div
              data-role="feed-divider"
              data-variant="last-seen"
            >
              Earlier
            </div>
            <article
              data-kind="update"
              data-role="feed-card"
              data-seen="true"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Email
                </span>
                <span
                  data-role="feed-card-age"
                >
                  14m
                </span>
              </div>
              <div
                data-role="feed-card-body"
                data-seen="true"
              >
                <p>
                  Drafted three subject lines for the password-reset email and kept the clearest.
                </p>
              </div>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
              data-seen="true"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Search
                </span>
                <span
                  data-role="feed-card-age"
                >
                  1h
                </span>
              </div>
              <div
                data-role="feed-card-body"
                data-seen="true"
              >
                <p>
                  Reindexed the product catalog; queries are back under 40ms.
                </p>
              </div>
            </article>
          </div>
          <button
            data-role="feed-show-earlier"
            type="button"
          >
            Show earlier
          </button>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="paused"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <div
            data-role="dock-mic-group"
          >
            <button
              aria-label="Talk"
              aria-pressed="false"
              data-dock-state="paused"
              data-role="dock-talk"
              type="button"
            >
              <span
                aria-hidden="true"
                data-role="dock-mic"
              >
                <span
                  data-role="dock-mic-orb"
                />
                <span
                  data-role="dock-mic-capsule"
                />
                <span
                  data-role="dock-mic-arc"
                />
                <span
                  data-role="dock-mic-stem"
                />
              </span>
            </button>
          </div>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: preview (4c) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
    style="--feed-bottom-inset: 0px;"
  >
    <header
      data-role="feed-header"
    >
      <div
        data-role="kiln-mark"
      >
        <img
          alt=""
          aria-hidden="true"
          data-role="kiln-glyph"
          src="/kiln-mark.svg"
        />
        <span
          data-role="kiln-wordmark"
        >
          Kiln
        </span>
      </div>
      <div
        data-role="header-actions"
      >
        <div
          data-role="notify-settings"
        >
          <button
            aria-controls="notify-settings-panel"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Notification settings"
            data-open="false"
            data-role="notify-settings-trigger"
            type="button"
          >
            <svg
              aria-hidden="true"
              data-role="notify-bell"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 12 C33 12 25 25 25 43 C25 56 21 63 16.5 67.5 C14.5 69.7 16 74 19.5 74 H76.5 C80 74 81.5 69.7 79.5 67.5 C75 63 71 56 71 43 C71 25 63 12 48 12 Z"
                fill="currentColor"
              />
              <path
                d="M39 78 A9 9 0 0 0 57 78 Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="notify-settings-panel"
            id="notify-settings-panel"
          >
            <div
              data-role="notify-settings-heading"
            >
              Notifications
            </div>
            <ul
              data-role="notify-settings-list"
            >
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="default"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Default
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="true"
                  data-role="notify-settings-option"
                  data-selected="true"
                  data-value="blocked"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Blocked
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="all"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    All updates
                  </span>
                </button>
              </li>
            </ul>
            <button
              data-role="notify-settings-permission"
              data-status="checking"
              disabled=""
              type="button"
            >
              Checking notifications…
            </button>
          </div>
        </div>
        <a
          aria-label="Dashboard"
          data-role="header-dashboard"
          href="/dashboard"
        >
          <svg
            aria-hidden="true"
            data-role="header-gear"
            viewBox="0 0 20 20"
          >
            <path
              d="M9.00 2.87A7.2 7.2 0 0 1 11.00 2.87L11.31 4.76A5.4 5.4 0 0 1 12.78 5.37L14.33 4.25A7.2 7.2 0 0 1 15.75 5.67L14.63 7.22A5.4 5.4 0 0 1 15.24 8.69L17.13 9.00A7.2 7.2 0 0 1 17.13 11.00L15.24 11.31A5.4 5.4 0 0 1 14.63 12.78L15.75 14.33A7.2 7.2 0 0 1 14.33 15.75L12.78 14.63A5.4 5.4 0 0 1 11.31 15.24L11.00 17.13A7.2 7.2 0 0 1 9.00 17.13L8.69 15.24A5.4 5.4 0 0 1 7.22 14.63L5.67 15.75A7.2 7.2 0 0 1 4.25 14.33L5.37 12.78A5.4 5.4 0 0 1 4.76 11.31L2.87 11.00A7.2 7.2 0 0 1 2.87 9.00L4.76 8.69A5.4 5.4 0 0 1 5.37 7.22L4.25 5.67A7.2 7.2 0 0 1 5.67 4.25L7.22 5.37A5.4 5.4 0 0 1 8.69 4.76L9.00 2.87Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <circle
              cx="10"
              cy="10"
              fill="none"
              r="2.4"
              stroke="currentColor"
              stroke-width="1.5"
            />
          </svg>
        </a>
        <div
          data-role="header-status"
        >
          <button
            aria-controls="header-status-panel"
            aria-expanded="false"
            aria-haspopup="true"
            data-open="false"
            data-role="feed-status"
            type="button"
          >
            5 tickets
            <span
              aria-hidden="true"
              data-role="feed-status-caret"
            />
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="header-status-panel"
            id="header-status-panel"
          >
            <div
              data-role="header-status-empty"
            >
              No tickets
            </div>
          </div>
        </div>
      </div>
    </header>
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="preview"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-tag"
                >
                  Preview
                </span>
                <span
                  data-role="feed-card-label"
                >
                  Auth
                </span>
                <span
                  data-role="feed-card-age"
                >
                  now
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  Here's the login screen running against the live endpoint.
                </p>
              </div>
              <img
                alt="Auth"
                data-role="feed-card-image"
                src="https://cdn.example/login.png"
              />
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Rate limiting
                </span>
                <span
                  data-role="feed-card-age"
                >
                  2m
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
                </p>
              </div>
            </article>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="paused"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <div
            data-role="dock-mic-group"
          >
            <button
              aria-label="Talk"
              aria-pressed="false"
              data-dock-state="paused"
              data-role="dock-talk"
              type="button"
            >
              <span
                aria-hidden="true"
                data-role="dock-mic"
              >
                <span
                  data-role="dock-mic-orb"
                />
                <span
                  data-role="dock-mic-capsule"
                />
                <span
                  data-role="dock-mic-arc"
                />
                <span
                  data-role="dock-mic-stem"
                />
              </span>
            </button>
          </div>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: proposal card with Accept 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
    style="--feed-bottom-inset: 0px;"
  >
    <header
      data-role="feed-header"
    >
      <div
        data-role="kiln-mark"
      >
        <img
          alt=""
          aria-hidden="true"
          data-role="kiln-glyph"
          src="/kiln-mark.svg"
        />
        <span
          data-role="kiln-wordmark"
        >
          Kiln
        </span>
      </div>
      <div
        data-role="header-actions"
      >
        <div
          data-role="notify-settings"
        >
          <button
            aria-controls="notify-settings-panel"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Notification settings"
            data-open="false"
            data-role="notify-settings-trigger"
            type="button"
          >
            <svg
              aria-hidden="true"
              data-role="notify-bell"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 12 C33 12 25 25 25 43 C25 56 21 63 16.5 67.5 C14.5 69.7 16 74 19.5 74 H76.5 C80 74 81.5 69.7 79.5 67.5 C75 63 71 56 71 43 C71 25 63 12 48 12 Z"
                fill="currentColor"
              />
              <path
                d="M39 78 A9 9 0 0 0 57 78 Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="notify-settings-panel"
            id="notify-settings-panel"
          >
            <div
              data-role="notify-settings-heading"
            >
              Notifications
            </div>
            <ul
              data-role="notify-settings-list"
            >
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="default"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Default
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="true"
                  data-role="notify-settings-option"
                  data-selected="true"
                  data-value="blocked"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Blocked
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="all"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    All updates
                  </span>
                </button>
              </li>
            </ul>
            <button
              data-role="notify-settings-permission"
              data-status="checking"
              disabled=""
              type="button"
            >
              Checking notifications…
            </button>
          </div>
        </div>
        <a
          aria-label="Dashboard"
          data-role="header-dashboard"
          href="/dashboard"
        >
          <svg
            aria-hidden="true"
            data-role="header-gear"
            viewBox="0 0 20 20"
          >
            <path
              d="M9.00 2.87A7.2 7.2 0 0 1 11.00 2.87L11.31 4.76A5.4 5.4 0 0 1 12.78 5.37L14.33 4.25A7.2 7.2 0 0 1 15.75 5.67L14.63 7.22A5.4 5.4 0 0 1 15.24 8.69L17.13 9.00A7.2 7.2 0 0 1 17.13 11.00L15.24 11.31A5.4 5.4 0 0 1 14.63 12.78L15.75 14.33A7.2 7.2 0 0 1 14.33 15.75L12.78 14.63A5.4 5.4 0 0 1 11.31 15.24L11.00 17.13A7.2 7.2 0 0 1 9.00 17.13L8.69 15.24A5.4 5.4 0 0 1 7.22 14.63L5.67 15.75A7.2 7.2 0 0 1 4.25 14.33L5.37 12.78A5.4 5.4 0 0 1 4.76 11.31L2.87 11.00A7.2 7.2 0 0 1 2.87 9.00L4.76 8.69A5.4 5.4 0 0 1 5.37 7.22L4.25 5.67A7.2 7.2 0 0 1 5.67 4.25L7.22 5.37A5.4 5.4 0 0 1 8.69 4.76L9.00 2.87Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <circle
              cx="10"
              cy="10"
              fill="none"
              r="2.4"
              stroke="currentColor"
              stroke-width="1.5"
            />
          </svg>
        </a>
        <div
          data-role="header-status"
        >
          <button
            aria-controls="header-status-panel"
            aria-expanded="false"
            aria-haspopup="true"
            data-open="false"
            data-role="feed-status"
            type="button"
          >
            3 tickets
            <span
              aria-hidden="true"
              data-role="feed-status-caret"
            />
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="header-status-panel"
            id="header-status-panel"
          >
            <div
              data-role="header-status-empty"
            >
              No tickets
            </div>
          </div>
        </div>
      </div>
    </header>
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="proposal"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Login Redesign
                </span>
                <span
                  data-role="feed-card-age"
                >
                  1m
                </span>
              </div>
              <button
                aria-label="Open ticket: Login Redesign"
                data-role="feed-card-open"
                type="button"
              >
                <span
                  data-role="feed-card-body"
                >
                  Rework the login screen to a single-column layout with inline validation.
                </span>
              </button>
              <div
                data-role="feed-card-actions"
              >
                <button
                  data-role="proposal-accept"
                  type="button"
                >
                  Accept
                </button>
              </div>
            </article>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="paused"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <div
            data-role="dock-mic-group"
          >
            <button
              aria-label="Talk"
              aria-pressed="false"
              data-dock-state="paused"
              data-role="dock-talk"
              type="button"
            >
              <span
                aria-hidden="true"
                data-role="dock-mic"
              >
                <span
                  data-role="dock-mic-orb"
                />
                <span
                  data-role="dock-mic-capsule"
                />
                <span
                  data-role="dock-mic-arc"
                />
                <span
                  data-role="dock-mic-stem"
                />
              </span>
            </button>
          </div>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PrimaryScreenView > matches the DOM-structure snapshot: updates only (4b) 1`] = `
<div>
  <div
    data-connection-state="connected"
    data-role="primary-screen"
    style="--feed-bottom-inset: 0px;"
  >
    <header
      data-role="feed-header"
    >
      <div
        data-role="kiln-mark"
      >
        <img
          alt=""
          aria-hidden="true"
          data-role="kiln-glyph"
          src="/kiln-mark.svg"
        />
        <span
          data-role="kiln-wordmark"
        >
          Kiln
        </span>
      </div>
      <div
        data-role="header-actions"
      >
        <div
          data-role="notify-settings"
        >
          <button
            aria-controls="notify-settings-panel"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Notification settings"
            data-open="false"
            data-role="notify-settings-trigger"
            type="button"
          >
            <svg
              aria-hidden="true"
              data-role="notify-bell"
              viewBox="0 0 96 96"
            >
              <path
                d="M48 12 C33 12 25 25 25 43 C25 56 21 63 16.5 67.5 C14.5 69.7 16 74 19.5 74 H76.5 C80 74 81.5 69.7 79.5 67.5 C75 63 71 56 71 43 C71 25 63 12 48 12 Z"
                fill="currentColor"
              />
              <path
                d="M39 78 A9 9 0 0 0 57 78 Z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="notify-settings-panel"
            id="notify-settings-panel"
          >
            <div
              data-role="notify-settings-heading"
            >
              Notifications
            </div>
            <ul
              data-role="notify-settings-list"
            >
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="default"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Default
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="true"
                  data-role="notify-settings-option"
                  data-selected="true"
                  data-value="blocked"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    Blocked
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-pressed="false"
                  data-role="notify-settings-option"
                  data-selected="false"
                  data-value="all"
                  disabled=""
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    data-role="notify-option-check"
                  />
                  <span
                    data-role="notify-option-label"
                  >
                    All updates
                  </span>
                </button>
              </li>
            </ul>
            <button
              data-role="notify-settings-permission"
              data-status="checking"
              disabled=""
              type="button"
            >
              Checking notifications…
            </button>
          </div>
        </div>
        <a
          aria-label="Dashboard"
          data-role="header-dashboard"
          href="/dashboard"
        >
          <svg
            aria-hidden="true"
            data-role="header-gear"
            viewBox="0 0 20 20"
          >
            <path
              d="M9.00 2.87A7.2 7.2 0 0 1 11.00 2.87L11.31 4.76A5.4 5.4 0 0 1 12.78 5.37L14.33 4.25A7.2 7.2 0 0 1 15.75 5.67L14.63 7.22A5.4 5.4 0 0 1 15.24 8.69L17.13 9.00A7.2 7.2 0 0 1 17.13 11.00L15.24 11.31A5.4 5.4 0 0 1 14.63 12.78L15.75 14.33A7.2 7.2 0 0 1 14.33 15.75L12.78 14.63A5.4 5.4 0 0 1 11.31 15.24L11.00 17.13A7.2 7.2 0 0 1 9.00 17.13L8.69 15.24A5.4 5.4 0 0 1 7.22 14.63L5.67 15.75A7.2 7.2 0 0 1 4.25 14.33L5.37 12.78A5.4 5.4 0 0 1 4.76 11.31L2.87 11.00A7.2 7.2 0 0 1 2.87 9.00L4.76 8.69A5.4 5.4 0 0 1 5.37 7.22L4.25 5.67A7.2 7.2 0 0 1 5.67 4.25L7.22 5.37A5.4 5.4 0 0 1 8.69 4.76L9.00 2.87Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
            <circle
              cx="10"
              cy="10"
              fill="none"
              r="2.4"
              stroke="currentColor"
              stroke-width="1.5"
            />
          </svg>
        </a>
        <div
          data-role="header-status"
        >
          <button
            aria-controls="header-status-panel"
            aria-expanded="false"
            aria-haspopup="true"
            data-open="false"
            data-role="feed-status"
            type="button"
          >
            5 tickets
            <span
              aria-hidden="true"
              data-role="feed-status-caret"
            />
          </button>
          <div
            aria-hidden="true"
            data-open="false"
            data-role="header-status-panel"
            id="header-status-panel"
          >
            <div
              data-role="header-status-empty"
            >
              No tickets
            </div>
          </div>
        </div>
      </div>
    </header>
    <section
      aria-label="Feed"
      data-connection-state="connected"
      data-role="feed"
      role="region"
    >
      <div
        data-role="feed-scroll"
      >
        <div
          data-role="backlog"
        >
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Rate limiting
                </span>
                <span
                  data-role="feed-card-age"
                >
                  2m
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  Added a fixed-window limiter on /auth — 20 requests a minute per IP. Suite is green.
                </p>
              </div>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Email
                </span>
                <span
                  data-role="feed-card-age"
                >
                  14m
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  Drafted three subject lines for the password-reset email and kept the clearest.
                </p>
              </div>
            </article>
          </div>
          <div
            data-role="backlog-slot"
          >
            <article
              data-kind="update"
              data-role="feed-card"
            >
              <div
                data-role="feed-card-head"
              >
                <span
                  data-role="feed-card-label"
                >
                  Search
                </span>
                <span
                  data-role="feed-card-age"
                >
                  1h
                </span>
              </div>
              <div
                data-role="feed-card-body"
              >
                <p>
                  Reindexed the product catalog; queries are back under 40ms.
                </p>
              </div>
            </article>
          </div>
        </div>
      </div>
    </section>
    <div
      data-role="dock-region"
    >
      <div
        data-role="activity-row"
      />
      <div
        data-dock-state="paused"
        data-role="dock"
      >
        <div
          data-mode="voice"
          data-role="dock-controls"
        >
          <div
            data-role="dock-mic-group"
          >
            <button
              aria-label="Talk"
              aria-pressed="false"
              data-dock-state="paused"
              data-role="dock-talk"
              type="button"
            >
              <span
                aria-hidden="true"
                data-role="dock-mic"
              >
                <span
                  data-role="dock-mic-orb"
                />
                <span
                  data-role="dock-mic-capsule"
                />
                <span
                  data-role="dock-mic-arc"
                />
                <span
                  data-role="dock-mic-stem"
                />
              </span>
            </button>
          </div>
          <button
            aria-label="Type a message"
            data-role="dock-keyboard"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="22"
            >
              <rect
                height="11"
                rx="2.5"
                width="19"
                x="2.5"
                y="4.5"
              />
              <path
                d="M6 8h.01M9.8 8h.01M13.6 8h.01M17.4 8h.01"
              />
              <path
                d="M6 11.3h.01M9.8 11.3h.01M13.6 11.3h.01M17.4 11.3h.01"
              />
              <path
                d="M8.5 13.6h7"
              />
              <path
                d="M8.8 21l3.2-3 3.2 3"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
